# VoxelCraft

./: .gitignore  CMakeLists.txt  README.md
build(rename to build)/res/: body.mtl  guiVertexShader.txt
include/: BlockType.hpp  Camera.h  Chunk.hpp  ChunkMeshBuilder.hpp  DisplayManager.h  Entity.h  GUIRenderer.h  GUIShader.h  GUITexture.h  LightSource.h  Loader.h  MasterRenderer.h  Maths.h  ModelTexture.h  MousePicker.h  OBJLoader.h  Player.h  RawModel.h  Renderer.h  ShaderProgram.h  StaticShader.h  TexturedModel.h  UV.hpp
include/glad/: glad.h
res/: FragmentShader.txt  VertexShader.txt  collisiontest.txt  guiFragmentShader.txt  head.mtl
src/: Camera.cpp  Chunk.cpp  ChunkMeshBuilder.cpp  DisplayManager.cpp  Entity.cpp  GUIRenderer.cpp  GUIShader.cpp  GUITexture.cpp  LightSource.cpp  Loader.cpp  MasterRenderer.cpp  Maths.cpp  ModelTexture.cpp  MousePicker.cpp  OBJLoader.cpp  Player.cpp  RawModel.cpp  Renderer.cpp  ShaderProgram.cpp  StaticShader.cpp  TexturedModel.cpp  glad.c  main.cpp
